Bug 204088 - Crash on VPNC connection activate
Summary: Crash on VPNC connection activate
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: knetworkmanager (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Unspecified
: NOR crash
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-08-16 22:21 UTC by Will Stephenson
Modified: 2009-08-30 11:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Will Stephenson 2009-08-16 22:21:26 UTC
Version:            (using Devel)
Installed from:    Compiled sources

Originally reported by Gregor Petrin <gregor.petrin@razum.si> 

What I was doing when the application crashed:
I tried connecting to a VPN (Cisco VPN) through the system tray icon. I'm using OpenSUSE 11.1.

 -- Backtrace:
Application: KNetworkManager (knetworkmanager), signal: Segmentation fault
[KCrash Handler]
#6  InterfaceConnectionItem::setActivationState (this=0x819c8a0, state=Knm::InterfaceConnection::Activating) at /usr/src/debug/networkmanager/monolithic/interfaceconnectionitem.cpp:134
#7  0x08050fbc in InterfaceConnectionItem::qt_metacall (this=0x819c8a0, _c=QMetaObject::InvokeMetaMethod, _id=1, _a=0xbff92b3c)
    at /usr/src/debug/networkmanager/build/monolithic/moc_interfaceconnectionitem.cpp:75
#8  0xb773a788 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#9  0xb773b412 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#10 0xb79591d3 in Knm::InterfaceConnection::activationStateChanged (this=0x81923c8, _t1=Knm::InterfaceConnection::Activating)
    at /usr/src/debug/networkmanager/build/libs/internals/moc_interfaceconnection.cpp:124
#11 0xb797184c in Knm::InterfaceConnection::setActivationState (this=0x81923c8, state=Knm::InterfaceConnection::Activating) at /usr/src/debug/networkmanager/libs/internals/interfaceconnection.cpp:73
#12 0xb7902880 in NMDBusActiveConnectionMonitor::activeConnectionChangedInternal (this=0x8170d30, iface=0x81fc070, state=1)
    at /usr/src/debug/networkmanager/backends/NetworkManager/nmdbusactiveconnectionmonitor.cpp:212
#13 0xb79037a8 in NMDBusActiveConnectionMonitor::activeConnectionListChanged (this=0x8170d30) at /usr/src/debug/networkmanager/backends/NetworkManager/nmdbusactiveconnectionmonitor.cpp:99
#14 0xb78cdc25 in NMDBusActiveConnectionMonitor::qt_metacall (this=0x8170d30, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0xbff92db8)
    at /usr/src/debug/networkmanager/build/backends/NetworkManager/moc_nmdbusactiveconnectionmonitor.cpp:73
#15 0xb773a788 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#16 0xb773b412 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#17 0xb78a3567 in Solid::Control::NetworkManager::Notifier::activeConnectionsChanged (this=0x8128e18) at /usr/src/debug/kdebase-workspace-4.2.98/build/libs/solid/control/networkmanager.moc:128
#18 0xb78a377b in Solid::Control::NetworkManager::Notifier::qt_metacall (this=0x8128e18, _c=QMetaObject::InvokeMetaMethod, _id=5, _a=0xbff92ed8)
    at /usr/src/debug/kdebase-workspace-4.2.98/build/libs/solid/control/networkmanager.moc:82
#19 0xb78a3fda in Solid::Control::NetworkManagerPrivate::qt_metacall (this=0x8128e18, _c=QMetaObject::InvokeMetaMethod, _id=9, _a=0xbff92ed8)
    at /usr/src/debug/kdebase-workspace-4.2.98/build/libs/solid/control/networkmanager_p.moc:70
#20 0xb773a788 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#21 0xb773b412 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#22 0xb4618887 in NMNetworkManager::activeConnectionsChanged (this=0x80dee18) at /usr/src/debug/kdebase-workspace-4.2.98/build/solid/networkmanager-0.7/manager.moc:155
#23 0xb461c2ed in NMNetworkManager::propertiesChanged (this=0x80dee18, properties=@0x81a03c8) at /usr/src/debug/kdebase-workspace-4.2.98/solid/networkmanager-0.7/manager.cpp:238
#24 0xb461cde2 in NMNetworkManager::qt_metacall (this=0x80dee18, _c=QMetaObject::InvokeMetaMethod, _id=11, _a=0xbff9314c)
    at /usr/src/debug/kdebase-workspace-4.2.98/build/solid/networkmanager-0.7/manager.moc:108
#25 0xb773a788 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/libQtCore.so.4
#26 0xb773b412 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib/libQtCore.so.4
#27 0xb4629363 in OrgFreedesktopNetworkManagerInterface::PropertiesChanged (this=0x80bdc30, _t1=@0x81a03c8)
    at /usr/src/debug/kdebase-workspace-4.2.98/build/solid/networkmanager-0.7/nm-manager-clientinterface.moc:163
#28 0xb4629c05 in OrgFreedesktopNetworkManagerInterface::qt_metacall (this=0x80bdc30, _c=QMetaObject::InvokeMetaMethod, _id=2, _a=0xbff9340c)
    at /usr/src/debug/kdebase-workspace-4.2.98/build/solid/networkmanager-0.7/nm-manager-clientinterface.moc:98
#29 0xb7840873 in ?? () from /usr/lib/libQtDBus.so.4
#30 0xb7848ab7 in ?? () from /usr/lib/libQtDBus.so.4
#31 0xb7735970 in QObject::event(QEvent*) () from /usr/lib/libQtCore.so.4
#32 0xb6d067fc in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#33 0xb6d0eaee in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#34 0xb7b5f27d in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#35 0xb772516b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#36 0xb7725db5 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib/libQtCore.so.4
#37 0xb7725fad in QCoreApplication::sendPostedEvents(QObject*, int) () from /usr/lib/libQtCore.so.4
#38 0xb7750c8f in ?? () from /usr/lib/libQtCore.so.4
#39 0xb64359c8 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#40 0xb6439083 in ?? () from /usr/lib/libglib-2.0.so.0
#41 0xb6439241 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#42 0xb77508d8 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#43 0xb6da6ce5 in ?? () from /usr/lib/libQtGui.so.4
#44 0xb772378a in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#45 0xb7723bd2 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#46 0xb7726079 in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#47 0xb6d06677 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#48 0x08051333 in main (argc=1, argv=0xbff93c34) at /usr/src/debug/networkmanager/monolithic/main.cpp:43
Comment 1 Will Stephenson 2009-08-17 07:54:46 UTC
SVN commit 1012196 by wstephens:

Fix another unchecked pointer crash.  This comes from coding blind.
OTOH where the crash occurred indicates that the VPNC connection was
brought up successfully.  Please test

BUG: 204088


 M  +11 -9     interfaceconnectionitem.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1012196
Comment 2 Gregor Petrin 2009-08-17 09:02:25 UTC
Thanks for the very quick response, I will test it as soon as I am able.
Comment 3 Gregor Petrin 2009-08-25 10:34:39 UTC
I tested the connection and there was no crash, so the fix was successful.

But I couldn't find the VPN connection (i.e. by using the command 'ip addr') and I couldn't ping any VPN addresses.. anyway, I didn't have too much time to play with it yet, so just consider this specific bug report as confirmed resolved :)
Comment 4 Will Stephenson 2009-08-30 11:16:30 UTC
Use bug #188489 for general VPNC connection problems, now the crash is fixed.