Fix another unchecked pointer crash.  This comes from coding blind. OTOH where the crash occurred indicates that the VPNC connection was brought up successfully.  Please test

BUG: 204088